@startuml
'https://plantuml.com/class-diagram
Abstract class SubSystemBase
class CommandBase

LoaderComponents <|- LoaderComponentsBase
Loader *-- LoaderComponentsBase
MoveLoaderBySpeed -|> CommandBase
SubSystemBase <|- Loader
MoveLoaderBySpeed o-- Loader

Interface LoaderComponents{
     WPI_TalonFX getMotor();
     TriangulatingRangefinder getFrontSensor();
     TriangulatingRangefinder getBackSensor();
}

class LoaderComponentsBase{
 WPI_TalonFX motor;
 TriangulatingRangefinder frontSensor;
 TriangulatingRangefinder backSensor;

     WPI_TalonFX getMotor();
     TriangulatingRangefinder getFrontSensor();
     TriangulatingRangefinder getBackSensor();
}

class Loader{
void moveLoaderBySpeed
void stop()
double getVoltageFront()
public double getVoltageBack()
double getDistanceFront()
double getDistanceBack()
boolean identifiedBallFront()
boolean identifiedBallBack()
boolean identifiedBall()
}

class MoveLoaderBySpeed{
Loader loader;
DoubleSupplier speedSupplier;

void execute()
void end()
}


@enduml